--- a/public/style.css
+++ b/public/style.css
@@ -42,6 +42,7 @@
 	margin-bottom: 5%;
 	height: 75%;
 	width: 50%;
+	word-wrap: break-word;
 	overflow-x: hidden;
     overflow-y: auto;
     /*padding-bottom: 50px;*/
