--- a/public/style.css
+++ b/public/style.css
@@ -34,37 +34,37 @@
 	position: relative;
 	float: left;
 	left: 10%;
-	padding-top: 10px;
-	padding-left: 5px;
-	padding-right: 5px;
-	margin-right: 0.5%;
-	border:1px #000 solid;
+	padding: 10px;
+	margin-right: 1%;
 	margin-bottom: 5%;
+	border:1px #000 solid;
 	height: 60%;
 	width: 40%;
 	word-wrap: break-word;
 	overflow-x: hidden;
     overflow-y: auto;
     /*padding-bottom: 50px;*/
+    font-family: "Times New Roman";
+    
 }
 #chatList {
 
 	list-style-type: none;
-	/*margin-bottom: 50px;*/ 
-	padding: 0px; 
+	/*margin-bottom: 50px;*/
+	padding: 0px;
 }
 #publicMsg {
-	padding: 2px; 
-	/*background-color: #aaa;*/
-	border-color: #ccc;
+	/*border-bottom: 1px #aaa dashed;*/
 	color: #000;
-	font-size: 14px;
-	margin: 1px;
+	font-size: 15;
+	margin: 0px;
+	
 }
 
 /*TODO*/
 #pmWrap {
-	
+	/*visibility: hidden;*/
+	visibility: visible;
 	position: relative;
 	float: left;
 	left: 5%;
@@ -72,29 +72,30 @@
 	width: 20%;
 	overflow-x: hidden;
     overflow-y: auto;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding: 5px;
 	margin-left: 0.5%;
 	border:1px #000 solid;
-	visibility: hidden;
-
+	font-family: "Times New Roman";
 }
 #pmList {
 
 	list-style-type: none; 
-	padding: 0; 
+	padding: 5px;
+	font-size: 14;
 	/*margin-bottom: 50px;*/ 
 }
 #privateMsg {
-	padding: 5px 5px; 
+	padding: 5px 5px;
 	border-color: #ccc;
 	color: #000;
-	font-size: 13px;
+	font-size: 14;
 	margin: 3px;
 }
 #otherguy {
 	text-align: center;
 	color: #aaa;
+	font-weight: bold;
+	height:auto;
 }
 
 /*DONE*/
@@ -102,22 +103,25 @@
 	position: relative;
 	float: right;
 	right: 10%;
-	font-size: 14;
+	font-size: 15;
 	height: 60%;
 	width: 10%;
 	text-align: left;
-	padding: 5px;
-	margin-left: 0.5%;
+	padding: 10px;
+	margin-left: 1%;
 	margin-right: 0;
 	border: 1px blue solid;
+	font-family: "Times New Roman";
 }
 #userHeading {
 	color:blue;
-	font-size: 16;
+	font-size: 18;
 	text-align: center;
 }
 #clickUser {
 	background:none;border:none;
+	font-size: 15;
+	font-family: "Times New Roman";	
 }
 
 
@@ -127,7 +131,7 @@
 	/*background-color: #aaa;*/
 	border-color: #ccc;
 	color: #aaa;
-	font-size: 14px;
+	font-size: 15;
 	margin: 0px;	
 }
 
@@ -143,27 +147,27 @@
 	width: 50%;
 }
 #sendPM {
-	position:absolute;
-	padding: 2px;
-	bottom: 0;
-	left: 10%;
-	width:100%;
+	position:fixed;
+	padding: 0px;
+	bottom: 28%;
+	/*left: 10%;*/
+	width:20%;
+	color: #aaa;
 }
 
 #messageBox { 
-	font-size: 14;
+	font-size: 15;
 	border: 1px blue solid;
 	padding: 5px; 
 	margin:1%;
 	width: 60%;
 }
 #pmBox {
-	font-size: 13;
-	border: 1px #aaa solid;
+	font-size: 14;
+	border: 1px #00599c solid;
 	padding: 3px;
-	margin-right: 0.5%; 
-	margin-left: 0%; 
-	width: 60%;
+	margin: 1%; 
+	width: 70%;
 }
 
 
@@ -186,7 +190,7 @@
 	background: -webkit-gradient(linear, left top, left bottom, from(#4ae), to(#28d));
 }
 #pmButton {
-	width: 20%; 
+	width: 15%;
 	border: none;
 	padding: 4px; 
 
